--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0"
+    "@vue/cli-service": "~4.5.0",
+    "eslint": "^7.24.0",
+    "eslint-plugin-vue": "^7.9.0"
   }
 }
